# sql-query-mcp

./: .dockerignore  .gitignore  AGENT.md  CONTRIBUTING.md  Dockerfile  README-zh.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: connections.example.json
docs/: README.zh-CN.md  adapter-development.md  api-reference.md  codex-setup.md  git-workflow.md  opencode-setup.md  project-overview.md  release-process.md  roadmap.md
docs/superpowers/plans/: 2026-03-19-repo-polish-and-awesome-mcp-plan.md  2026-03-20-release-and-pypi-automation-plan.md
docs/superpowers/specs/: 2026-03-20-release-and-pypi-automation-design.md
postgres_query_mcp/: __init__.py  app.py  audit.py  config.py  errors.py  executor.py  introspection.py  registry.py  validator.py
sql_query_mcp/: __init__.py  app.py  async_queries.py  config.py  errors.py  executor.py  exporter.py  importer.py  introspection.py  namespace.py  registry.py  release_metadata.py  validator.py
sql_query_mcp/adapters/: __init__.py  hive.py  mysql.py  postgres.py
tests/: test_app.py  test_async_queries.py  test_audit.py  test_config.py  test_executor.py  test_exporter.py  test_importer.py  test_metadata.py  test_namespace.py  test_registry.py  test_release_metadata.py  test_validator.py
