[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-query-mcp"
version = "0.1.0"
description = "Read-only SQL MCP server for PostgreSQL and MySQL."
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE"]
keywords = ["mcp", "mcp-server", "sql", "database", "postgresql", "mysql", "cli"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Environment :: Console",
]
dependencies = [
  "mcp>=1.12.4",
  "PyMySQL>=1.1",
  "psycopg[binary]>=3.2",
  "psycopg-pool>=3.2",
  "sqlglot>=25.20.2",
]

[project.urls]
Homepage = "https://github.com/andyWang1688/sql-query-mcp"
Repository = "https://github.com/andyWang1688/sql-query-mcp"
Documentation = "https://github.com/andyWang1688/sql-query-mcp/blob/main/README.md"
Issues = "https://github.com/andyWang1688/sql-query-mcp/issues"

[project.scripts]
sql-query-mcp = "sql_query_mcp.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sql_query_mcp*"]
