[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-query-mcp"
version = "0.1.4"
description = "Read-only SQL MCP server for PostgreSQL and MySQL."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Andy Wang" }]
keywords = ["mcp", "mcp-server", "sql", "database", "postgresql", "mysql", "cli", "codex", "chatgpt"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Environment :: Console",
]
dependencies = [
  "mcp>=1.12.4",
  "PyMySQL>=1.1",
  "psycopg[binary]>=3.2",
  "psycopg-pool>=3.2",
  "sqlglot>=25.20.2",
  "tomli>=2; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/andyWang1688/sql-query-mcp"
Repository = "https://github.com/andyWang1688/sql-query-mcp"
Documentation = "https://github.com/andyWang1688/sql-query-mcp/blob/main/README.md"
Issues = "https://github.com/andyWang1688/sql-query-mcp/issues"

[project.scripts]
sql-query-mcp = "sql_query_mcp.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sql_query_mcp*"]
